[gd_scene load_steps=30 format=2]

[ext_resource path="res://navdi2/Resources/src/roughyfive.tres" type="DynamicFont" id=1]
[ext_resource path="res://00-core/SubwayStopBoard.gd" type="Script" id=2]
[ext_resource path="res://navdi2/Node Scripts/Board/NavdiBoardState.gd" type="Script" id=3]
[ext_resource path="res://navdi2/Node Scripts/Cursor/NavdiCursorFollower.gd" type="Script" id=4]
[ext_resource path="res://02-ashk/temp_click.wav" type="AudioStream" id=5]
[ext_resource path="res://69-brut/hand.png" type="Texture" id=6]
[ext_resource path="res://69-brut/beauty_scratched.png" type="Texture" id=7]
[ext_resource path="res://69-brut/unshaded.tres" type="Material" id=8]
[ext_resource path="res://02-ashk/pencil sound.ogg" type="AudioStream" id=9]
[ext_resource path="res://69-brut/beauty_unscratched.png" type="Texture" id=10]
[ext_resource path="res://69-brut/scratchables/scratched_bat.png" type="Texture" id=11]
[ext_resource path="res://69-brut/ScratchManager2.gd" type="Script" id=12]
[ext_resource path="res://69-brut/scratchables/scratchables.png" type="Texture" id=13]
[ext_resource path="res://69-brut/bomb1.png" type="Texture" id=14]
[ext_resource path="res://69-brut/BombSetup.gd" type="Script" id=15]
[ext_resource path="res://69-brut/rope_mask.png" type="Texture" id=16]
[ext_resource path="res://69-brut/rope.png" type="Texture" id=17]
[ext_resource path="res://69-brut/explode.png" type="Texture" id=18]
[ext_resource path="res://69-brut/rope.gd" type="Script" id=19]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 4.69366

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.864103, 1 )
colors = PoolColorArray( 0.8, 0.8, 0.8, 1, 0.8, 0.8, 0.8, 0 )

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 2

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Viewport")

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=10]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=11]
next_pass = SubResource( 10 )
light_mode = 2

[node name="NavdiBoard" type="Node2D"]
position = Vector2( 80, 80 )
script = ExtResource( 2 )
board_view_size = Vector2( 160, 160 )
show_outline = true

[node name="ScratchManager" type="Node2D" parent="."]
material = SubResource( 1 )
script = ExtResource( 12 )
images = {
"rat": ExtResource( 11 )
}
particleTarget = ExtResource( 10 )
scratchColor = Color( 1, 1, 1, 1 )

[node name="Timer" type="Timer" parent="ScratchManager"]
wait_time = 4.0

[node name="NoDrawZone" type="Area2D" parent="ScratchManager"]
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ScratchManager/NoDrawZone"]
polygon = PoolVector2Array( -48, -56, 48, -56, 54, 80, 80, 80, 80, -80, -80, -80, -80, 80, -80, 91, -24, 90, -14, 66, -17, 57, -25, 60, -40, 80, -47, 80 )

[node name="notebook" type="Sprite" parent="ScratchManager"]
material = ExtResource( 8 )
z_index = -1
texture = ExtResource( 10 )

[node name="pencil shadow" type="Sprite" parent="ScratchManager"]
modulate = Color( 0, 0, 0, 0.403922 )
material = SubResource( 3 )
z_index = 1

[node name="pencil shadow" type="Sprite" parent="ScratchManager/pencil shadow"]
modulate = Color( 0, 0, 0, 0.403922 )
material = SubResource( 3 )
position = Vector2( 26.6535, 73.1502 )
rotation = 0.303687
scale = Vector2( 1.11167, 1.24499 )
z_index = 1
texture = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="ScratchManager/pencil shadow/pencil shadow"]

[node name="Area2D" type="Area2D" parent="ScratchManager/pencil shadow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScratchManager/pencil shadow/Area2D"]
shape = SubResource( 4 )

[node name="Node2D" type="Node2D" parent="ScratchManager/pencil shadow"]

[node name="pencil" type="Node2D" parent="ScratchManager"]
z_index = 2
script = ExtResource( 4 )
get_cursor_from_group = "SuperCursor"

[node name="pencil" type="Sprite" parent="ScratchManager/pencil"]
material = ExtResource( 8 )
position = Vector2( 0, 94.886 )
scale = Vector2( 1.20339, 1.20339 )
texture = ExtResource( 6 )

[node name="particles" type="CPUParticles2D" parent="ScratchManager/pencil/pencil"]
position = Vector2( -16.3808, -24.6873 )
emitting = false
amount = 40
lifetime = 3.0
randomness = 1.0
lifetime_randomness = 0.09
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.41
direction = Vector2( -1, 1 )
spread = 119.16
gravity = Vector2( 0, 20 )
initial_velocity = 32.86
initial_velocity_random = 0.27
damping = 48.35
damping_random = 0.2
angle_random = 1.0
scale_amount_random = 1.0
color_ramp = SubResource( 8 )

[node name="Instructions" type="Label" parent="ScratchManager"]
material = ExtResource( 8 )
margin_left = -78.0
margin_top = -77.0
margin_right = 76.0
margin_bottom = -53.0
custom_fonts/font = ExtResource( 1 )
text = "gay rats yea!!!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ScratchManager"]
stream = ExtResource( 9 )
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ScratchManager"]
stream = ExtResource( 5 )

[node name="ScratchPrize" type="Sprite" parent="ScratchManager"]
material = SubResource( 7 )
texture = ExtResource( 13 )
hframes = 10
frame = 1

[node name="ScratchBG" type="Sprite" parent="ScratchManager"]
material = SubResource( 7 )
z_index = -1
texture = ExtResource( 7 )

[node name="State" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = SubResource( 5 )
mode = 2

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 160, 160 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="Line2D" type="Line2D" parent="Viewport"]
position = Vector2( 80, 80 )
default_color = Color( 1, 1, 1, 1 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 2
sharp_limit = 20.0
round_precision = 80
antialiased = true

[node name="preview" type="Sprite" parent="."]
position = Vector2( 64.1699, 65.4074 )
scale = Vector2( 0.197876, 0.182408 )
z_index = -1
texture = SubResource( 6 )

[node name="BombSetup" type="Tween" parent="."]
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="BombSetup"]
material = SubResource( 9 )
position = Vector2( 133.385, 141.625 )
scale = Vector2( 0.765452, 0.765452 )
z_index = 8
texture = ExtResource( 14 )
offset = Vector2( 5.1227, -9.96419 )

[node name="rope" type="Sprite" parent="BombSetup"]
material = SubResource( 11 )
position = Vector2( 93.3033, 168.214 )
scale = Vector2( 1, -1 )
z_index = 6
texture = ExtResource( 17 )
offset = Vector2( -22.1532, 13.4969 )
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="BombSetup/rope"]
position = Vector2( -66.3001, 25.8458 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 1
texture = ExtResource( 18 )

[node name="Tween" type="Tween" parent="BombSetup/rope"]

[node name="Light2D" type="Light2D" parent="BombSetup"]
position = Vector2( 70.3792, 130.951 )
scale = Vector2( 0.728511, 0.552131 )
texture = ExtResource( 16 )
mode = 2
range_z_min = 5
range_z_max = 10

[connection signal="timeout" from="ScratchManager/Timer" to="ScratchManager" method="_on_Timer_timeout"]
[connection signal="area_entered" from="ScratchManager/NoDrawZone" to="ScratchManager" method="_on_NoDrawZone_area_entered"]
[connection signal="area_exited" from="ScratchManager/NoDrawZone" to="ScratchManager" method="_on_NoDrawZone_area_exited"]
[connection signal="tween_completed" from="BombSetup" to="BombSetup" method="_on_BombSetup_tween_completed"]
